wrapper width fixed in Layout Shifter

--- a/layout-shifter.sass
+++ b/layout-shifter.sass
@@ -42,12 +42,14 @@
 
 @media (min-width: 400px) and (max-width: 600px) and (orientation: portrait)
   .wrapper
+    width: 100vw
     grid-template-columns: 100vw
     grid-template-rows: 100px 60vh 70vh
     grid-template-areas: "red" "blue" "orange"
 
 @media only screen and (max-width: 400px)
   .wrapper
+    width: 100vw
     grid-template-columns: 100vw
     grid-template-rows: 70px 75vh 100vh
     grid-template-areas: "red" "blue" "orange"
